# rst_formatter

./: LICENSE  Makefile  README.md  README.rst  ding.py  main.py  pyproject.toml  rst_formatter.py  ruff.toml  test_rst_formatter.py  testdocument.rst  testfile.rst
src/: rst_formatter.py
tests/: test_rst_formatter.py
